--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,9 @@ services:
     image: nginx:latest
     container_name: nginx
     volumes:
-      - /nginx_conf/conf.d:/etc/nginx/conf.d
-      - /nginx_conf/nginx.conf:/etc/nginx/nginx.conf # Монтируем основной конфиг Nginx
-      - /nginx_conf/letsencrypt:/etc/letsencrypt
+      - nginx_conf/conf.d:/etc/nginx/conf.d
+      - nginx_conf/nginx.conf:/etc/nginx/nginx.conf # Монтируем основной конфиг Nginx
+      - nginx_conf/letsencrypt:/etc/letsencrypt
     networks:
       - wp-network
     restart: always
@@ -21,8 +21,8 @@ services:
       MYSQL_USER: wpuser
       MYSQL_PASSWORD: wppassword
     volumes:
-      - ./mariadb_data/config/mariadb.cnf:/etc/mysql/mariadb.cnf   # Монтируем оптимизированный конфиг
-      - ./mariadb_data/data:/var/lib/mysql               # Монтируем данные базы данных
+      - mariadb_data/config/mariadb.cnf:/etc/mysql/mariadb.cnf   # Монтируем оптимизированный конфиг
+      - mariadb_data/data:/var/lib/mysql               # Монтируем данные базы данных
     networks:
       - wp_network
     restart: always
@@ -31,8 +31,8 @@ services:
     container_name: redis
     command: redis-server /usr/local/etc/redis/redis.conf  # Указываем путь к кастомной конфигурации
     volumes:
-      - ./redis_data/config/redis.conf:/usr/local/etc/redis/redis.conf  # Монтируем кастомный конфиг
-      - ./redis_data/data:/data  # Монтируем директорию для данных Redis
+      - redis_data/config/redis.conf:/usr/local/etc/redis/redis.conf  # Монтируем кастомный конфиг
+      - redis_data/data:/data  # Монтируем директорию для данных Redis
     networks:
       - wp_network
     restart: always
